tests/paczka2/big_fuzzy/14634899.err
Error in line 1: 9AmyPxaz6hp A284 53,9
Error in line 4: 9AmyPxaz6hp S576 75,6
Error in line 7: BFZ A284 11,4
Error in line 17: Sndwh1Jy S576 56,0
Error in line 25: Sndwh1Jy S843 30,6
Error in line 27: Fodx8YfSnqV S843 12,6
Error in line 55: Sndwh1Jy S843 46,8
Error in line 57: Fodx8YfSnqV A284 34,1
Error in line 59: G5h S843 51,2
Error in line 61: G5h S576 17,4
Error in line 62: G5h A111 42,8
Error in line 67: BFZ S843 31,6
Error in line 81: 9AmyPxaz6hp S576 47,0
Error in line 84: Sndwh1Jy S843 10,6
Error in line 98: S843 A284 2,2
Error in line 103: S843 S576 4,2
Error in line 110: Odnd S576 50,9
Error in line 83: 9AmyPxaz6hp A284 46,4
Error in line 111: Odnd S843 25,6
Error in line 108: BFZ A284 76,6
Error in line 119: Odnd S576 50,1
Error in line 125: Odnd S843 71,4
Error in line 127: 9AmyPxaz6hp S843 66,5
Error in line 131: S843 A284 62,9
Error in line 132: 9AmyPxaz6hp A111 34,7
Error in line 134: Fodx8YfSnqV S576 65,1
Error in line 133: Odnd A284 26,8
Error in line 146: Odnd A111 70,2
Error in line 149: Odnd A284 -3,6
Error in line 148: Odnd A284 40,4
Error in line 141: Fodx8YfSnqV A111 56,4
Error in line 159: Odnd S843 2,3
Error in line 178: 9AmyPxaz6hp S843 19,4
Error in line 180: Odnd A284 72,6
Error in line 187: G5h A111 97,9
Error in line 183: Fodx8YfSnqV S576 75,5
Error in line 182: Odnd S843 12,4
Error in line 188: G5h S576 48,8
Error in line 194: Odnd A284 33,2
Error in line 204: BFZ S576 25,8
Error in line 220: 9AmyPxaz6hp&A284&12,4
Error in line 215: 9AmyPxaz6hp S576 64,6
Error in line 223: G5h A284 84,1
Error in line 230: Sndwh1Jy A111 3,1
